@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/metasploit
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/metasploit/ChangeLog,v 1.79 2014/03/06 15:44:07 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/metasploit/ChangeLog,v 1.80 2014/03/19 21:04:57 zerochaos Exp $
+
+  19 Mar 2014; Rick Farina <zerochaos@gentoo.org> metasploit-9999.ebuild:
+  remove bundled rb-readline due to multiple bugs, use upstream version instead
 
   06 Mar 2014; Rick Farina <zerochaos@gentoo.org> metasploit-9999.ebuild:
   replace failing patch with epatch_user
